Fix spacing for play button

--- a/styles.css
+++ b/styles.css
@@ -244,7 +244,7 @@ h1 {
   display: grid;
   justify-content: center;
   align-content: center;
-  margin-top: 2em;
+  margin: 1em;
 }
 
 .action-button {
